header position fixed, additional div wraps for links in footer

--- a/tpl/css/styles.css
+++ b/tpl/css/styles.css
@@ -106,12 +106,24 @@ h6 {
 .main-div {
     width: 1000px;
     margin: 0 auto;
+
 }
     .header {
-        padding: 10px 0 4px 20px;
         margin-bottom: 20px;
         border-bottom: 1px solid #bababa;
         overflow: hidden;
+        /*************/
+        top:0;
+        height: 84px;
+        width: 1000px;
+        position: fixed;
+
+        background: white;
+        /*************/
+    }
+
+    .container {
+        margin-top: 110px;
     }
         .logo {
             width: 30%;
@@ -318,3 +330,6 @@ h6 {
                     height: 25px;
                     margin:10px 0;
                 }
+            .footer-link-wrap {
+                display: inline-block;
+            }
